@@ -2,55 +2,48 @@ package com.example.demo.service.impl;
 
 import com.example.demo.model.Task;
 import com.example.demo.model.User;
+import com.example.demo.repository.TaskRepository;
 import com.example.demo.service.TaskService;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 @Service
 public class InMemoryTaskService implements TaskService {
-    private final Map<Long, Task> tasks = new ConcurrentHashMap<>();
-    private long nextId = 1;
+    
+    @Autowired
+    private TaskRepository taskRepository;
 
     @Override
     public List<Task> getAllTasks() {
-        return new ArrayList<>(tasks.values());
+        return taskRepository.findAll();
     }
 
     @Override
     public List<Task> getAllTasks(User user) {
-        return tasks.values().stream()
-                .filter(task -> task.getUser() != null && task.getUser().getId().equals(user.getId()))
-                .collect(Collectors.toList());
+        return taskRepository.findByUserAndDeletedFalse(user);
     }
 
     @Override
     public List<Task> getPendingTasks(User user) {
-        return tasks.values().stream()
-                .filter(task -> task.getUser() != null && 
-                        task.getUser().getId().equals(user.getId()) && 
-                        !task.isCompleted())
-                .collect(Collectors.toList());
+        return taskRepository.findByUserAndDeletedFalse(user).stream()
+                .filter(task -> !task.isCompleted())
+                .toList();
     }
 
     @Override
     public Task createTask(Task task) {
-        task.setId(nextId++);
-        tasks.put(task.getId(), task);
-        return task;
+        return taskRepository.save(task);
     }
 
     @Override
     public void deleteTask(Long taskId) {
-        tasks.remove(taskId);
+        taskRepository.deleteById(taskId);
     }
 
     @Override
     public Task getTaskById(Long taskId) {
-        return tasks.get(taskId);
+        return taskRepository.findById(taskId).orElse(null);
     }
 } 
